fix 404 error on mobile-menu about

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,5 +189,6 @@ footer {
     }
     #menu-mobile{
         display:flex;
+        position: relative;
     }
 }
